Refactor: 트레이닝 상세 조회 API_루틴 타입별 분리 조회 가능 로직 추가